убипание третей вложености

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h2 class="visually-hidden"> Наши преимущества </h2> <!-- Потом спрятать-->
 
                 <ul class="strengths-container" >
-                    <li class="item">
+                    <li class="strengths-item">
                         <div class="strengths-icon">
                             <svg class="icon" width="65px" height="70px" >
                                 <use href="./icon/symbol-defs.svg#icon-antenna"></use>
@@ -73,7 +73,7 @@
                         <h3 class="strengths-title" > Внимание к деталям </h3>
                         <p class="strengths-text" > Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
                     </li>
-                    <li class="item">
+                    <li class="strengths-item">
                         <div class="strengths-icon">
                             <svg class="icon" width="70px" height="70px" >
                                 <use href="./icon/symbol-defs.svg#icon-clock"></use>
@@ -82,7 +82,7 @@
                         <h3 class="strengths-title" > Пунктуальность </h3>
                         <p class="strengths-text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
                     </li>
-                    <li class="item">
+                    <li class="strengths-item">
                         <div class="strengths-icon">
                             <svg class="icon" width="70px" height="70px" >
                                 <use href="./icon/symbol-defs.svg#icon-diagram"></use>
@@ -91,7 +91,7 @@
                         <h3 class="strengths-title" > Планирование </h3>
                         <p class="strengths-text" > Равным образом консультация с широким активом в значительной степени обуславливает. </p>
                     </li>
-                    <li class="item">
+                    <li class="strengths-item">
                         <div class="strengths-icon">
                             <svg class="icon" width="70px" height="70px" >
                                 <use href="./icon/symbol-defs.svg#icon-astronaut"></use>
