--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
         <section class="samples">
             <div class="container">
                 <h1 class="visually-hidden">Наши работы</h1> <!--потом спрятать -->
-                <ul class="list">
+                <ul class="samples-list">
                     <li class="list-type"><button type="button" class="type-work">Все</button></li>
                     <li class="list-type"><button type="button" class="type-work">Веб-сайты</button></li>  
                     <li class="list-type"><button type="button" class="type-work">Приложения</button></li> 
